--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,90 +1,54 @@
-name: PyBuilder Workflow
+ name: PyBuilder Workflow
 
 on:
-
-push:
-
-branches:
-
-- main
-
-pull_request:
-
-branches:
-
-- main
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
 
-lint:
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-runs-on: ubuntu-latest
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.9
 
-steps:
+      - name: Install pylint
+        run: pip install pylint
 
-- name: Checkout Repository
+      - name: Run pylint
+        run: pylint src/main/python/batch.py
 
-uses: actions/checkout@v2
+  build_and_test:
+    runs-on: ubuntu-latest
 
-- name: Set up Python
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-uses: actions/setup-python@v2
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.9
+           
+      - name: Install PyBuilder
+        run: | 
+          python -m pip install --upgrade pip
+          pip install pybuilder
+     
+      - name: Build and Test
+        run: pyb
 
-with:
-
-python-version: 3.9
-
-- name: Install pylint
-
-run: pip install pylint
-
-- name: Run pylint
-
-run: pylint src/main/python/helloworld.py
-
-build_and_test:
-
-runs-on: ubuntu-latest
-
-steps:
-
-- name: Checkout Repository
-
-uses: actions/checkout@v2
-
-- name: Set up Python
-
-uses: actions/setup-python@v2
-
-with:
-
-python-version: 3.9
-
-- name: Install PyBuilder
-
-run: |
-
-python -m pip install --upgrade pip
-
-pip install pybuilder
-
-- name: Build and Test
-
-run: pyb
-
-- name: Upload Test Results
-
-uses: actions/upload-artifact@v2
-
-with:
-
-name: test-results
-
-path: target/reports
-
-- name: List Files # Optional step
-
-run: |
-
-ls -R
-
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-results
+          path: target/reports
