--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -1,13 +1,14 @@
  name: PyBuilder Workflow
---- on:   
-   push
+
+ on:
+  push:
     branches:
       - main
   pull_request:
     branches:
       - main
 
-jobs:
+ jobs:
   lint:
     runs-on: ubuntu-latest
 
