--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@
         run: pip install pylint
 
       - name: Run pylint
-        run: pylint src/main/python/batch.py
+        run: pylint src/main/python/helloworld.py
 
   build_and_test:
     runs-on: ubuntu-latest
